Correct some spacing

--- a/src/style.css
+++ b/src/style.css
@@ -6,7 +6,7 @@ body {
   width: 350px;
   height: 750px;
   margin: 30px auto 0;
-  background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
+  background-image: linear-gradient(120deg, #89f7fe 0%, #66a6ff 100%);
   border-radius: 25px;
   padding: 6px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.15), 0 6px 20px 0 rgba(0, 0, 0, 0.14);
@@ -64,13 +64,13 @@ h1 {
 h5 {
   color: #fff;
   font-weight: 300 !important;
-  font-size: 17px !important;
+  font-size: 16px !important;
 }
 
 .emoji {
   font-size: 170px;
   text-align: center;
-  line-height: 130px;
+  line-height: 150px;
   margin-bottom: 30px;
 }
 
@@ -86,7 +86,7 @@ h5 {
 }
 
 .row-infos {
-  margin-top: 10px;
+  margin-top: 5px;
 }
 
 .infos {
